--- a/books/imagine-app-doc/config.yaml
+++ b/books/imagine-app-doc/config.yaml
@@ -1,7 +1,7 @@
 title: "imagine-app doc"
-summary: "画像管理&アノテーションツールのimagine-appについて、インストール方法や使い方を紹介します"
-topics: []
-published: false
+summary: "画像管理&アノテーションツールのimagine-app(https://github.com/mpppk/imagine)について、インストール方法や使い方を紹介します。まだ書けていないチャプターがありますが、随時更新します。"
+topics: ["CLI", "機械学習", "画像認識"]
+published: true
 price: 0 # 有料の場合200〜5000
 # 本に含めるチャプターを順番に並べましょう
 chapters:
